role based login
done frontend and backend excluding styling

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ SECRET_KEY = 'django-insecure-i*8=ht9&tzdqvk_j254rg*ooi0h%xg=%iyx)^p2gvdb8^2pala
 USER_NAME = 'ADMIN
 USER_PASSWORD = 'ADMIN'
 USER_EMAIL = '24MCA043@CHARUSAT.EDU.IN'
+
+REACT_APP_API_BASE=http://127.0.0.1:8000/api/
